# uploader

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.example.toml  api_token.py  config.example.json  config.example.toml  config.template.toml  docker-compose.yaml  main.py  pyproject.toml  schema.sql  types_.py
python/: api_token.py  config.toml  main.py  requirements.txt  schema.sql
src/: config.rs  delete.rs  main.rs  upload.rs
src/models/: incoming.rs  mod.rs  responses.rs  users.rs
