[package]
name = "uploader"
version = "0.1.0"
authors = ["AbstractUmbra <Umbra@AbstractUmbra.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
serde = "1.0.116"
serde_derive = "1.0.116"
toml = "0.5"