[tool.poetry]
name = "abstractumbra-cdn"
version = "0.1.0"
description = ""
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
fastapi = "*"
toml = "*"
uvicorn = "*"
python-multipart = "*"
asyncpg = "*"
PyJWT = "*"
pycryptodome = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
asyncpg-stubs = "*"

[tool.pyright]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
