[tool.poetry]
name = "abstractumbra-cdn"
version = "0.1.0"
description = ""
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
fastapi = "*"
toml = "*"
uvicorn = "*"
python-multipart = "*"
asyncpg = "*"
PyJWT = "*"
pycryptodome = "*"

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "*"
ruff = "*"

[tool.ruff]
target-version = "py311"
line-length = 125
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]
[tool.ruff.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = "./venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
